--- a/client/js/demo.html
+++ b/client/js/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>can</title>
+    <title>kubi_client_js_test</title>
     <script src="./Kubi.js"></script>
     <script src="./Kubi_client.js"></script>
 </head>
@@ -88,6 +88,7 @@
        }
 
     }
+
     function User(){
         this.uid="";
         this.name="";
@@ -109,23 +110,26 @@
     }
 
     var ku_client= new Kubi_Client()
+    var user=new User();
+        user.name="fromjs";
+        user.uid="id_fromjs";
+        user.role="shower"
     ku_client.OnEnter(function(){
         console.log("has enter")
-        var user=new User();
-        user.name="wencan";
-        user.uid="can";
-        user.role="showers"
-        ku_client.Request("_on_login",user.to_json_str(),"",function(node){
+ 
+        ku_client.Request("on_login",user.to_json_str(),"",function(node){
             json_tuple = JSON.parse( node.getDataStr());
             console.log(json_tuple["code"]);
             console.log(json_tuple["msg"]);
             console.log("login do!");
-        })
-        ku_client.OnNotice("on_shower_result",function(node){
+            ku_client.OnNotice("on_caculater_result",function(node){
+            console.log("img get...");
             var task=new Task();
             task.parse_from_json_str(node.getDataStr(),node.getDataBytes_asU8());
             document.getElementById("show_img").src = "data:image/jpeg;base64," + Help_Uint8ArrayToBase64(task.img_datas_div[0]);
         })
+        })
+        
     })
     ku_client.OnEnd(function(){
         console.log("has lost");
@@ -135,7 +139,7 @@
         }, 1000);
     })
     
-    ku_client.ClientStart("can", "ws://127.0.0.1:8081");
+    ku_client.ClientStart(user.uid, "ws://127.0.0.1:8080");
 
  
 </script>
